Fixed swagger - removed CRUD FSContactRole and generated from swagger
